--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,88 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Wu, You
     - name: Date of Birth
-      value: 14th March 1879
+      value: 16th January 2000
     - name: Languages
-      value: English, German
+      value: Mandarin & Hokkein (闽南语)
+    - name:
+      value: German (C2)
+    - name:
+      value: English (C1)
+    - name:
+      value: Spanish (B1/B2)
+    - name:
+      value: Swedish (A1)
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Bachelor of Science, Computational Science & Engineering
+      institution: ETH Zürich, Zürich, Switzerland 🇨🇭
+      year: 2020 - 
+    - title: Abitur (G9)
+      institution: Campus Klarenthal, Wiesbaden, Germany 🇩🇪
+      year: 2017 - 2020
+      description: Continued education in Germany and attended Grade 11 - 13.
+    - title: High School
+      institution: Xiamen No.1 High School of Fujian, Xiamen, China 🇨🇳
+      year: 2015 - 2016
+      description: Attended the first half of Grade 10 before relocating to Germany.
 
-- title: Experience
+
+- title: Research Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: University of Tennessee, Knoxville, TN 🇺🇸
+      year: SEP 2023 - NOV 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Innovative Computing Lab (ICL) under the supervision of Prof. Hartwig Anzt.
+        - Created the Julia wrapper package <a href="https://github.com/youwuyou/Ginkgo.jl">Ginkgo.jl</a> for the high-performance linear algebra library <a href="https://ginkgo-project.github.io/">ginkgo</a>.
+    - title: Bachelor Thesis Student
+      institution: ETH Zürich, Zürich, Switzerland 🇨🇭
+      year: NOV 2022 - JUL 2023
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - Institute of Geophysics under the supervision of Prof. Taras V. Gerya, Dr. Luca Dal Zilio and Dr. Albert De Monserrat Navarro.
+        - Development of a 2D unified and generalized solver that contains architecture-agnostic kernels targeting CPUs/GPUs for fully compressible two-phase porous media in Julia.
+        - Implemented inertial wave-mediated effects and rate-and-state dependent friction. Tested an adaptive time stepping scheme to resolve both long- and short-time scales, ranging from years to milliseconds during the dynamic propagation of dynamic rupture.
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/youwuyou/Ginkgo.jl">Ginkgo.jl</a>
+      year: 2023-now
+      description: Creating C API for the C++ ginkgo library and implementing a wrapper package in Julia.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: NOV 2022
+      title: SC22 Student Cluster Competition
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+        - ETH Zürich “RACKlette” Team, Dallas, TX 🇺🇸
+        - Responsible for the HPC App "PHASTA" and obtained top results. "PHASTA" is a HPC software which supports modeling compressible or incompressible, laminar or turbulent, steady or unsteady flows in 3D, using unstructured grids.
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
+    - year: JUN 2020
+      title: Karin-Elisabeth Loos Sponsorship Award
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Wiesbaden, Germany 🇩🇪
+        - Awarded with 1.000 EUR as prize money.
+        - The prize is intended to stimulate interest in the natural sciences and promote education in this field among students who have obtained a high school diploma.
 
-- title: Other Interests
-  type: list
+    - year: JUN 2020
+      title: National Linguistics Olympiad (DOL)
+      items: 
+        - Berlin, Germany 🇩🇪
+        - 6th. Place | DOL Germany | Leibniz Center for General Linguistics (ZAS)
+
+
+
+- title: Recent talks & Presentations
+  type: time_table
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - year: NOV 2023
+      title: SC23 BoF Julia for HPC <a href="https://github.com/JuliaParallel/julia-hpc-bof-sc23" target="_blank"><i class="fab fa-github"></i></a>
+      items: 
+        - Denver, CO 🇺🇸
