--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,8 @@ related_blog_posts:
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out
 # the information below.
 giscus:
-  repo: youwuyou/youwuyou.github.io                         # <your-github-user-name>/<your-github-repo-name>
+  repo: youwuyou/youwuyou.github.io  # <your-github-user-name>/<your-github-repo-name>
+  repo_id: R_kgDOKyzLtg
   category: Comments             # name of the category under which discussions will be created
   mapping: title                 # identify discussions by post title
   strict: 1                      # use strict identification mode
