--- a/_config.yml
+++ b/_config.yml
@@ -136,6 +136,7 @@ giscus:
   repo: youwuyou/youwuyou.github.io  # <your-github-user-name>/<your-github-repo-name>
   repo_id: R_kgDOKyzLtg
   category: Comments             # name of the category under which discussions will be created
+  category_id: DIC_kwDOKyzLts4CcQZ8
   mapping: title                 # identify discussions by post title
   strict: 1                      # use strict identification mode
   reactions_enabled: 1           # enable (1) or disable (0) emoji reactions
