--- a/_config.yml
+++ b/_config.yml
@@ -153,8 +153,8 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
+  # - name: medium.com
+    # rss_url: https://medium.com/@al-folio/feed
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -261,8 +261,8 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['📑formatting', 'images', 'links', 'math', 'code'] # these tags will be displayed on the front page of your blog
-display_categories: ['📋sample-posts'] # these categories will be displayed on the front page of your blog
+display_tags: ['Italy🇮🇹', 'Spain🇪🇸', 'Switzerland🇨🇭', 'coding💻'] # these tags will be displayed on the front page of your blog
+display_categories: ['hiking🥾'] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
