--- a/_config.yml
+++ b/_config.yml
@@ -261,8 +261,8 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['Italy🇮🇹', 'Spain🇪🇸', 'Switzerland🇨🇭', 'coding💻'] # these tags will be displayed on the front page of your blog
-display_categories: ['hiking🥾'] # these categories will be displayed on the front page of your blog
+display_tags: ['Italy🇮🇹', 'Spain🇪🇸', 'Switzerland🇨🇭', 'USA🇺🇸', 'China🇨🇳'] # these tags will be displayed on the front page of your blog
+display_categories: ['hiking🥾', 'Coding💻'] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
